--- a/_Layout.html
+++ b/_Layout.html
@@ -1,19 +1,50 @@
 <!DOCTYPE html>
-
 <html>
-    <head>
-        <meta charset="utf-8"/>
-        <title>{{ page.title }}</title>
-        <link rel="stylesheet" type="text/css" media="screen" href="{{wiki.base_path}}css/base.css" />
-        <link rel="stylesheet" type="text/css" media="screen" href="{{wiki.base_path}}css/custom.css" />
+	<head>
+		<meta http-equiv="Content-type" content="text/html;charset=utf-8">
+		<link rel="stylesheet" type="text/css" href="{{ wiki.base_path }}/css/gollum-static.css" media="all">
+		<link rel="stylesheet" type="text/css" href="{{ wiki.base_path }}/css/template-static.css" media="all">
+		
+		<!--[if IE 7]>
+		<link rel="stylesheet" type="text/css" href="{{ wiki.base_path }}/css/ie7.css" media="all">
+		<![endif]-->
 
-        <meta name="author" content="{page.author}}"/>
+		<script type="text/javascript">
+				var baseUrl = '{{ wiki.base_path }}';
+				var pageFullPath = '{{ page.title }}';
+		</script>
+		<script type="text/javascript" src="{{ wiki.base_path }}/javascript/jquery-1.7.2-static.min.js"></script>
+		<script type="text/javascript" src="{{ wiki.base_path }}/javascript/gollum-static.js"></script>
 
-    </head>
+		<title>{{ page.title }}</title>
+	</head>
+<body>
 
-    <body>
-        <div class="content">
-            {{page.content}}
-        </div>
-    </body>
+	<div id="wiki-wrapper" class="page">
+
+		<div id="head">
+			<h1>{{ page.title }}</h1>
+			<ul class="actions">
+				<li class="minibutton"><a href="{{ wiki.base_path }}/"
+					 class="action-home-page">Home</a></li>
+			</ul>
+		</div>
+
+		<div id="wiki-content">
+			<div class="">
+				<div id="wiki-body" class="gollum-{{ page.format }}-content">
+					<div class="{{ page.format }}-body">
+						{{ page.content }}
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div id="footer">
+			<p id="last-edit">Last edited on {{ page.date }}</p>
+		</div>
+
+		</div>
+
+</body>
 </html>
