fix path in static layout

--- a/_Layout.html
+++ b/_Layout.html
@@ -11,7 +11,7 @@
 
 		<script type="text/javascript">
 				var baseUrl = '{{ wiki.base_path }}';
-				var pageFullPath = '{{ page.title }}';
+				var pageFullPath = '{{ page.path }}';
 		</script>
 		<script type="text/javascript" src="{{ wiki.base_path }}/javascript/jquery-1.7.2-static.min.js"></script>
 		<script type="text/javascript" src="{{ wiki.base_path }}/javascript/gollum-static.js"></script>
