--- a/_Layout.html
+++ b/_Layout.html
@@ -26,7 +26,9 @@
 			<h1>{{ page.title }}</h1>
 			<ul class="actions">
 				<li class="minibutton"><a href="{{ wiki.base_path }}/"
-					 class="action-home-page">Home</a></li>
+					 class="action-home-page">Documentation home</a></li>
+				<li class="minibutton"><a href="https://www.rosettacommons.org/"
+					 class="action-home-page">RosettaCommons Website</a></li>
 			</ul>
 		</div>
 
